# HW_3_Victorio

./: README.md
siwp2005-Victorio-sort/: setup.cfg  setup.py
siwp2005-Victorio-sort/src/siwp2005_Victorio_sort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
siwp2005-Victorio-sort/src/sort/: insertion_sort.py  quick_sort.py
siwp2005-Victorio-sort/tests/: test_bubble_sort.py  test_insertion_sort.py  test_quick_sort.py
