[metadata]
name = siwp2005-Victorio
version = 0.1.2
author = Victorio Putra Saritan
author_email = victorio.422023022@civitas.ukrida.ac.id
description = A collection of sorting algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Victorioputra/HW_3_Victorio.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
